bundles/com.zutubi.pulse.core.commands.xcode/src/test/com/zutubi/pulse/core/commands/xcode/XCodePostProcessorTest.testFatal.txt
CompileC build/interact.build/Debug-iphoneos/interact.build/Objects-normal/armv7/NGSFieldConfig+Factory.o ../ngslib/ngslib/NGSFieldConfig+Factory.m normal armv7 objective-c com.apple.compilers.llvm.clang.1_0.compiler
cd /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact
setenv LANG en_US.US-ASCII
setenv PATH "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin:/Applications/Xcode.app/Contents/Developer/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin"
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x objective-c -arch armv7 -fmessage-length=0 -std=gnu99 -Wno-trigraphs -fpascal-strings -O0 -Wno-missing-field-initializers -Wmissing-prototypes -Wreturn-type -Wno-implicit-atomic-properties -Wformat -Wno-missing-braces -Wparentheses -Wswitch -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wunused-variable -Wunused-value -Wno-uninitialized -Wno-unknown-pragmas -Wno-shadow -Wno-four-char-constants -Wno-sign-compare -Wno-shorten-64-to-32 -Wpointer-sign -Wno-newline-eof -Wno-selector -Wno-strict-selector-match -Wno-undeclared-selector -Wno-deprecated-implementations -DDEBUG=1 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS5.0.sdk -Wprotocol -Wdeprecated-declarations -g -Wno-conversion -Wno-sign-conversion -mthumb "-DIBOutlet=__attribute__((iboutlet))" "-DIBOutletCollection(ClassName)=__attribute__((iboutletcollection(ClassName)))" "-DIBAction=void)__attribute__((ibaction)" -miphoneos-version-min=5.0 -iquote /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/interact-generated-files.hmap -I/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/interact-own-target-headers.hmap -I/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/interact-all-target-headers.hmap -iquote /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/interact-project-headers.hmap -I/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/Debug-iphoneos/include -I/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/DerivedSources/armv7 -I/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/DerivedSources -F/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/Debug-iphoneos -include /var/folders/s5/xpmb9h1x2hl1pcncsffdzr0w0000gn/C/com.apple.Xcode.501/SharedPrecompiledHeaders/interact-Prefix-eweuxrqsvfndudblryfhpqromfnt/interact-Prefix.pch -MMD -MT dependencies -MF /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/Objects-normal/armv7/NGSFieldConfig+Factory.d --serialize-diagnostics /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/Objects-normal/armv7/NGSFieldConfig+Factory.dia -c /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/../ngslib/ngslib/NGSFieldConfig+Factory.m -o /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/build/interact.build/Debug-iphoneos/interact.build/Objects-normal/armv7/NGSFieldConfig+Factory.o
In file included from /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/../ngslib/ngslib/NGSFieldConfig+Factory.m:17:
/Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact/../ngslib/ngslib/NGSMenuFieldConfig.h:10:9: fatal error: 'NGSMenuEntry.h' file not found
#import "NGSMenuEntry.h"
^
1 error generated.
CompileC build/interact.build/Debug-iphoneos/interact.build/Objects-normal/armv7/NGSFormConfig.o ../ngslib/ngslib/NGSFormConfig.m normal armv7 objective-c com.apple.compilers.llvm.clang.1_0.compiler
cd /Users/joe/pulse/data/agents/macbuild1/recipes/42598404/base/products/ngs/src/client/ios/interact
setenv LANG en_US.US-ASCII